force-app/main/default/objects/VSC_Order__c/VSC_Order__c.object-meta.xml
<CustomObject>
    <label>VSC Order</label>
    <nameField>
        <label>VSC Order  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VSC Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>