force-app/main/default/objects/VSC_Order__c/fields/Addon_1__c.field-meta.xml
<CustomField>
    <fullName>Addon_1__c</fullName>
    <label>Addon 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>YES</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>Perforations</fullName>
                <isActive>false</isActive>
                <label>Perforations</label>
            </value>
            <value>
                <fullName>Scratch Off</fullName>
                <isActive>false</isActive>
                <label>Scratch Off</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>