force-app/main/default/objects/VSC_Order__c/fields/Addon_1_yes__c.field-meta.xml
<CustomField>
    <fullName>Addon_1_yes__c</fullName>
    <label>Addon #1 yes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>scratch</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>