force-app/main/default/objects/VSC_Order__c/fields/Addon_2__c.field-meta.xml
<CustomField>
    <fullName>Addon_2__c</fullName>
    <label>Addon 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>