force-app/main/default/objects/VSC_Order__c/fields/D__c.field-meta.xml
<CustomField>
    <fullName>D__c</fullName>
    <label>DSG services Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>