force-app/main/default/objects/VSC_Order__c/fields/Distribution_Method__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Method__c</fullName>
    <label>Distribution Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solo</fullName>
            </value>
            <value>
                <fullName>Newspaper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>