force-app/main/default/objects/VSC_Order__c/fields/DSG_Services_Required__c.field-meta.xml
<CustomField>
    <fullName>DSG_Services_Required__c</fullName>
    <label>DSG Services Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>