force-app/main/default/objects/VSC_Order__c/fields/fa_account__c.field-meta.xml
<CustomField>
    <fullName>fa_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>Financial_Account__c</referenceTo>
    <relationshipLabel>VSC Orders (Financial Account)</relationshipLabel>
    <relationshipName>VSC_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>