force-app/main/default/objects/VSC_Order__c/fields/Fin_Account__c.field-meta.xml
<CustomField>
    <fullName>Fin_Account__c</fullName>
    <label>Fin Account</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>