force-app/main/default/objects/VSC_Order__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>Financial_Account__c</referenceTo>
    <relationshipLabel>VSC Orders</relationshipLabel>
    <relationshipName>VSC_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>