force-app/main/default/objects/VSC_Order__c/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Image</fullName>
            </value>
            <value>
                <fullName>Big 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>