force-app/main/default/objects/VSC_Order__c/fields/Impression__c.field-meta.xml
<CustomField>
    <fullName>Impression__c</fullName>
    <label>Impression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>