force-app/main/default/objects/VSC_Order__c/fields/Is_RPDM_included_in_this_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_RPDM_included_in_this_Order__c</fullName>
    <label>Is RPDM included in this Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>YES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>