force-app/main/default/objects/VSC_Order__c/fields/MDT_Resource__c.field-meta.xml
<CustomField>
    <fullName>MDT_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>VSC_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>