force-app/main/default/objects/VSC_Order__c/fields/Opportunity_c__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_c__c</fullName>
    <label>Opportunity #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>