force-app/main/default/objects/VSC_Order__c/fields/Primary_Contact_Location__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Location__c</fullName>
    <label>Primary Contact Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>