force-app/main/default/objects/VSC_Order__c/fields/primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>primary_Contact_Name__c</fullName>
    <label>primary Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>